tests/diagnostics_golden/diag_pr1123f_unguarded_sum_count.txt
Diagnostics Golden: PR11.23f Unguarded Sum Count
Source: tests/negative/neg_pr1123f_unguarded_sum_count.safe

Expected diagnostic output:
------------------------------------------------------------------------
neg_pr1123f_unguarded_sum_count.safe:21:18: error: divisor not provably nonzero
  |
  | 21 |       return sum / count
  |    |                    ^~~~~
  |
  note: right operand 'count' has type integer (range -9_223_372_036_854_775_808 .. 9_223_372_036_854_775_807),
        which includes zero.
  note: no preceding conditional or subtype constraint establishes
        count /= 0 on all paths reaching this division.
  note: rule: D27 Rule 3 (Division by Provably Nonzero Divisor)
  note: per spec/02-restrictions.md section 2.8.3 paragraph 133:
        "The right operand of the operators /, mod, and rem shall be
        provably nonzero at compile time."
  note: per spec/02-restrictions.md section 2.8.3 paragraph 134:
        "If none of the conditions in paragraph 133 holds, the program
        is nonconforming and a conforming implementation shall reject
        the expression with a diagnostic."
  suggestion: add a guard before the division:
        if count /= 0 then
           return sum / count;
        else
           return 0;  -- or handle the zero case
        end if;
  suggestion: or use a positive subtype that excludes zero:
        type Positive_Value is range 1 .. 100;
------------------------------------------------------------------------
